--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,3 +1,5 @@
+@import url('./Spinner.css');
+
 .dashboard {
   margin: 0 auto;
   max-width: 1500px;
@@ -23,6 +25,11 @@
 
 .dashboard__header__right {
   display: flex;
+}
+
+.dashboard__header__left {
+  display: flex;
+  align-items: center;
 }
 
 .dashboard__grid {
