--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -36,7 +36,8 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-around;
+  padding: 0 20px;
 }
 
 .dashboard__cell {
@@ -45,7 +46,8 @@
   display: flex;
   height: 300px;
   margin: 0 0 40px 0;
-  width: 440px;
+  min-width: 400px;
+  width: 30%;
 }
 
 .dashboard__cell--active {
